unpackaged/main/default/objects/Activity/fields/Agente_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Agente_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente Call Center</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>