unpackaged/main/default/objects/Activity/fields/Agente_Perfil__c.field-meta.xml
<CustomField>
    <fullName>Agente_Perfil__c</fullName>
    <formula>Agente_Call_Center__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agente Perfil</label>
    <type>Text</type>
</CustomField>