unpackaged/main/default/objects/Activity/fields/Agente_Rol__c.field-meta.xml
<CustomField>
    <fullName>Agente_Rol__c</fullName>
    <formula>Agente_Call_Center__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agente Rol</label>
    <type>Text</type>
</CustomField>