unpackaged/main/default/objects/Activity/fields/Asignado_Perfil__c.field-meta.xml
<CustomField>
    <fullName>Asignado_Perfil__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignado a Perfil</label>
    <type>Text</type>
</CustomField>