unpackaged/main/default/objects/Activity/fields/ATC_Survey_Response_1__c.field-meta.xml
<CustomField>
    <fullName>ATC_Survey_Response_1__c</fullName>
    <formula>TEXT(Talkdesk_Activity__r.ATC_Survey_Response_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATC Survey Response 1</label>
    <type>Text</type>
</CustomField>