unpackaged/main/default/objects/Activity/fields/Audio_llamada__c.field-meta.xml
<CustomField>
    <fullName>Audio_llamada__c</fullName>
    <label>Audio llamada</label>
    <type>Url</type>
</CustomField>