unpackaged/main/default/objects/Activity/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso relacionado a la llamada</description>
    <label>Caso ATC</label>
    <referenceTo>Casos_Residente__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>