unpackaged/main/default/objects/Activity/fields/debugg__c.field-meta.xml
<CustomField>
    <fullName>debugg__c</fullName>
    <label>debugg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>