unpackaged/main/default/objects/Activity/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>