unpackaged/main/default/objects/Activity/fields/Fecha_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cierre__c</fullName>
    <label>Fecha de Cierre</label>
    <type>DateTime</type>
</CustomField>