unpackaged/main/default/objects/Activity/fields/First_Notification__c.field-meta.xml
<CustomField>
    <fullName>First_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Notification</label>
    <type>Checkbox</type>
</CustomField>