unpackaged/main/default/objects/Activity/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <displayFormat>TSK-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Folio</label>
    <type>AutoNumber</type>
</CustomField>