unpackaged/main/default/objects/Activity/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <formula>Vivienda__r.Fraccionamiento__c</formula>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>