unpackaged/main/default/objects/Activity/fields/Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>Hold_Time__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Hold_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Time</label>
    <type>Text</type>
</CustomField>