unpackaged/main/default/objects/Activity/fields/Hold_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>Hold_Time_sec__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Hold_TIme_sec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Time (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>