unpackaged/main/default/objects/Activity/fields/Id_Agente__c.field-meta.xml
<CustomField>
    <fullName>Id_Agente__c</fullName>
    <defaultValue>&#39;no id&#39;</defaultValue>
    <label>Id Agente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>