unpackaged/main/default/objects/Activity/fields/MLI__c.field-meta.xml
<CustomField>
    <fullName>MLI__c</fullName>
    <formula>Vivienda__r.MLI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLI</label>
    <type>Text</type>
</CustomField>