unpackaged/main/default/objects/Activity/fields/ONE_YEAR_AGO_TODAY__c.field-meta.xml
<CustomField>
    <fullName>ONE_YEAR_AGO_TODAY__c</fullName>
    <formula>IF((DATE(YEAR(TODAY()) - 1,MONTH(TODAY()),DAY(TODAY())) == DATEVALUE(CreatedDate)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ONE YEAR AGO TODAY</label>
    <type>Checkbox</type>
</CustomField>