unpackaged/main/default/objects/Activity/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <formula>IF(Vivienda__r.Plaza__c == &#39;No Gestionable&#39;, null, Vivienda__r.Plaza__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaza</label>
    <type>Text</type>
</CustomField>