unpackaged/main/default/objects/Activity/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>IF( ISBLANK(Fecha_de_Cierre__c  ), &#39;0 Días, 0 Hrs, 0 Mins&#39;, TEXT(FLOOR( Fecha_de_Cierre__c - CreatedDate)) + &#39; Días, &#39; +
TEXT(FLOOR(((Fecha_de_Cierre__c - CreatedDate) - FLOOR(Fecha_de_Cierre__c - CreatedDate)) * 24)) + &#39; Hrs, &#39; +
IF(
FLOOR(Fecha_de_Cierre__c - CreatedDate) &gt; 0,
TEXT(ROUND((((MOD(((Fecha_de_Cierre__c - CreatedDate) - (FLOOR(Fecha_de_Cierre__c - CreatedDate))) , (FLOOR(Fecha_de_Cierre__c - CreatedDate))) * 24) - (FLOOR(((Fecha_de_Cierre__c - CreatedDate) - (FLOOR(Fecha_de_Cierre__c - CreatedDate))) * 24))) * 60),0)) + &#39; Mins&#39;,
TEXT(ROUND((((MOD(((Fecha_de_Cierre__c - CreatedDate) - (FLOOR(Fecha_de_Cierre__c - CreatedDate))) , 1) * 24) - (FLOOR(((Fecha_de_Cierre__c - CreatedDate) - (FLOOR(Fecha_de_Cierre__c - CreatedDate))) * 24))) * 60),0)) + &#39; Mins&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>