unpackaged/main/default/objects/Activity/fields/SLA_Horas__c.field-meta.xml
<CustomField>
    <fullName>SLA_Horas__c</fullName>
    <formula>IF( ISBLANK( Fecha_de_Cierre__c ) , 0, (  Fecha_de_Cierre__c -  CreatedDate ) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA (Horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>