unpackaged/main/default/objects/Activity/fields/Solucion__c.field-meta.xml
<CustomField>
    <fullName>Solucion__c</fullName>
    <label>Solución</label>
    <type>TextArea</type>
</CustomField>