unpackaged/main/default/objects/Activity/fields/Speed_to_Answer__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Answer__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Speed_to_Answer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed to Answer</label>
    <type>Text</type>
</CustomField>