unpackaged/main/default/objects/Activity/fields/Speed_to_Answer_sec__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Answer_sec__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Speed_to_Answer_sec_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed to Answer (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>