unpackaged/main/default/objects/Activity/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>