unpackaged/main/default/objects/Activity/fields/Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__CallDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talk Time</label>
    <type>Text</type>
</CustomField>