unpackaged/main/default/objects/Activity/fields/Talk_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time_sec__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Talk_Time_sec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talk Time (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>