unpackaged/main/default/objects/Activity/fields/Talkdesk_Activity__c.field-meta.xml
<CustomField>
    <fullName>Talkdesk_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talkdesk Activity</label>
    <referenceTo>talkdesk__Talkdesk_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>