unpackaged/main/default/objects/Activity/fields/TD_Duracion_de_Llamada__c.field-meta.xml
<CustomField>
    <fullName>TD_Duracion_de_Llamada__c</fullName>
    <label>Duración de Llamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>