unpackaged/main/default/objects/Activity/fields/TD_Duracion_Total__c.field-meta.xml
<CustomField>
    <fullName>TD_Duracion_Total__c</fullName>
    <label>Duración Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>