unpackaged/main/default/objects/Activity/fields/TD_Tiempo_de_Espera__c.field-meta.xml
<CustomField>
    <fullName>TD_Tiempo_de_Espera__c</fullName>
    <label>Tiempo de Espera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>