unpackaged/main/default/objects/Activity/fields/TD_Tiempo_en_Hold__c.field-meta.xml
<CustomField>
    <fullName>TD_Tiempo_en_Hold__c</fullName>
    <label>Tiempo en Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>