unpackaged/main/default/objects/Activity/fields/TD_Tiempo_Final_de_Llamada__c.field-meta.xml
<CustomField>
    <fullName>TD_Tiempo_Final_de_Llamada__c</fullName>
    <label>Tiempo Final de Llamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>