unpackaged/main/default/objects/Activity/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <label>Teléfono</label>
    <length>40</length>
    <type>Text</type>
</CustomField>