unpackaged/main/default/objects/Activity/fields/Tipificacion_nivel_1__c.field-meta.xml
<CustomField>
    <fullName>Tipificacion_nivel_1__c</fullName>
    <label>Tipificación nivel 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cobranza</fullName>
            </value>
            <value>
                <fullName>Contactar a un Departamento</fullName>
            </value>
            <value>
                <fullName>Entrega</fullName>
            </value>
            <value>
                <fullName>Garantía</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>