unpackaged/main/default/objects/Activity/fields/Tipificacion_nivel_2__c.field-meta.xml
<CustomField>
    <fullName>Tipificacion_nivel_2__c</fullName>
    <label>Tipificación nivel 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipificacion_nivel_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicita Fecha de Entrega</fullName>
            </value>
            <value>
                <fullName>Solicitar Planos de Vivienda</fullName>
            </value>
            <value>
                <fullName>Reportar Incidencia en Entrega de Vivienda</fullName>
            </value>
            <value>
                <fullName>Solicitar Eco-Tecnologías</fullName>
            </value>
            <value>
                <fullName>Asesoria Técnica</fullName>
            </value>
            <value>
                <fullName>Confirmar Cita de Garantía</fullName>
            </value>
            <value>
                <fullName>Realizar Reporte de Garantía</fullName>
            </value>
            <value>
                <fullName>Solicitud de Escrituras</fullName>
            </value>
            <value>
                <fullName>Solicitud de Factura</fullName>
            </value>
            <value>
                <fullName>Solicitud Carta de Servicio</fullName>
            </value>
            <value>
                <fullName>Reporte Falla en Servicios</fullName>
            </value>
            <value>
                <fullName>Queja Administradora</fullName>
            </value>
            <value>
                <fullName>Información de Fraccionamientos</fullName>
            </value>
            <value>
                <fullName>Seguimiento a Promociones de Venta</fullName>
            </value>
            <value>
                <fullName>Seguimiento a Proceso de Escritura</fullName>
            </value>
            <value>
                <fullName>Consultar Saldo Postventa</fullName>
            </value>
            <value>
                <fullName>Solicitar Carta de No Adeudo</fullName>
            </value>
            <value>
                <fullName>Queja de Seguimiento de Cobranza</fullName>
            </value>
            <value>
                <fullName>Se Envía Llamada a Corporativo</fullName>
            </value>
            <value>
                <fullName>Hablar con un Agente</fullName>
            </value>
            <value>
                <fullName>Impermeabilizante</fullName>
            </value>
            <value>
                <fullName>Estructural</fullName>
            </value>
            <value>
                <fullName>Caso</fullName>
                <isActive>false</isActive>
                <label>Caso</label>
            </value>
            <value>
                <fullName>Solución Call Center</fullName>
                <isActive>false</isActive>
                <label>Solución Call Center</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>