unpackaged/main/default/objects/Activity/fields/Tipo_de_Llamada__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Llamada__c</fullName>
    <formula>TEXT(Talkdesk_Activity__r.talkdesk__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Llamada</label>
    <type>Text</type>
</CustomField>