unpackaged/main/default/objects/Activity/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>