unpackaged/main/default/objects/Activity/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Wait_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wait Time</label>
    <type>Text</type>
</CustomField>