unpackaged/main/default/objects/Activity/fields/Wait_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_sec__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Wait_Time_sec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wait Time (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>